--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,29 +1,24 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
+# config/services.yaml
 parameters:
-    photos_directory: '%kernel.project_dir%/public/uploads/images'
+  photos_directory: "%kernel.project_dir%/public/uploads/images"
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  _defaults:
+    autowire: true
+    autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-#        Service\FileUploader:
-#            arguments:
-#                $targetDirectory: '%app.images_profile_directory%'
+  App\:
+    resource: "../src/"
+    exclude:
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
 
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # Services de sécurité explicites
+  App\Security\LoginFormAuthenticator:
+    autowire: true
+    autoconfigure: true
+    #       $urlGenerator: "@router"
+    #       $userProvider: '@App\Security\UserProvider'
+# add more service definitions when explicit configuration is needed
+# please note that last definitions always *replace* previous ones
