--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,6 @@
 # config/services.yaml
 parameters:
-  photos_directory: "%kernel.project_dir%/public/uploads/images"
+  photos_directory: "%kernel.project_dir%/public/images/profile"
 
 services:
   _defaults:
@@ -14,6 +14,7 @@ services:
       - "../src/Entity/"
       - "../src/Kernel.php"
 
+
   # Services de sécurité explicites
   App\Security\LoginFormAuthenticator:
     autowire: true
@@ -22,3 +23,7 @@ services:
     #       $userProvider: '@App\Security\UserProvider'
 # add more service definitions when explicit configuration is needed
 # please note that last definitions always *replace* previous ones
+
+#  App\Service\FileUploader:
+#    arguments:
+#      $targetDirectory: '%photos_directory%'
