implement reset password logic via maker

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -19,6 +19,9 @@ framework:
 
         buses:
             messenger.bus.default: []
+            command_bus:
+                middleware:
+                    - router_context
 
         routing:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
