--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,12 +40,9 @@ security:
           session: ~
 
   access_control:
-    - { path: ^/(login|register), roles: PUBLIC_ACCESS }
+    - { path: ^/(login|register|reset_password), roles: PUBLIC_ACCESS }
     - { path: ^/(participant|sortie|sorties), roles: ROLE_USER }
-    # - { path: ^/register, roles: PUBLIC_ACCESS }
-    - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
     - { path: ^/admin, roles: ROLE_ADMIN }
-
 
 
 when@test:
