add massiv participant with csv file

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,6 +18,17 @@ framework:
   php_errors:
     log: true
 
+  messenger:
+    # Uncomment this (and the failed transport below) to send sync messages
+    # sync: 'sync://'
+
+    transports:
+      # https://symfony.com/doc/current/messenger.html#transport-configuration
+      async: "doctrine://default"
+
+    routing:
+      # Pour envoyer les emails immédiatement, commentez ou modifiez cette ligne
+      #Symfony\Component\Mailer\Messenger\SendEmailMessage: async
 when@test:
   framework:
     test: true
